# set-loglevel

./: README.md  package.json  pyproject.toml  pyrightconfig.json
.github/workflows/: routine-tests.yml
set_loglevel/: __init__.py  set_loglevel.py
tests/: test_set_loglevel.py
